# pydantic-gsheets

./: 404.html  README.md  ROADMAP.md  index.html  pyproject.toml
.github/workflows/: tests.yml
auth/: index.html
drive_types/: index.html
search/: search_index.json
src/pydantic_gsheets/: worksheet.py
tests/integration/: simple_test.py
worksheet/: index.html
